@@ -1,3 +1,7 @@
+2018-04-22  Carl Hetherington  <cth@carlh.net>
+
+	* Add missing MOS makrer in ISDCF names if there is no sound.
+
 2018-04-21  Carl Hetherington  <cth@carlh.net>
 
 	* Updated nl_NL translation from Rob van Nieuwkerk.
